--- a/StraightGUI/Makefile
+++ b/StraightGUI/Makefile
@@ -1,7 +1,7 @@
 CXX= g++
 CXXFLAGS = -Wall -O -g `pkg-config gtkmm-2.4 --cflags`
 LDFLAGS=`pkg-config gtkmm-2.4 --libs`
-OBJS = HumanPlayer.o ComputerPlayer.o Command.o Card.o Player.o Deck.o Game.o subject.o model.o controller.o DeckGUI.o PlayerHandView.o TableView.o PlayerStatusView.o view.o main.o 
+OBJS = HumanPlayer.o ComputerPlayer.o Command.o Card.o Player.o Deck.o Game.o FacadeAdapter.o DialogView.o subject.o model.o controller.o DeckGUI.o PlayerHandView.o TableView.o PlayerStatusView.o view.o main.o 
 EXEC = mvc
 
 $(EXEC): $(OBJS)
@@ -16,7 +16,8 @@ subject.o: subject.h subject.cc
 controller.o: controller.h model.h controller.cc
 view.o: view.h observer.h controller.h model.h subject.h DeckGUI.h view.cc
 main.o: view.h controller.h model.h main.cc
-PlayerStatusView.o: PlayerStatusView.h PlayerStatusView.cc
+PlayerStatusView.o: PlayerStatusView.h controller.h model.h PlayerStatusView.cc
 TableView.o: TableView.h controller.h model.h DeckGUI.h TableView.cc
 PlayerHandView.o: PlayerHandView.h model.h DeckGUI.h PlayerHandView.cc
-DialogView.o: DialogView.cc
+DialogView.o: DialogView.h DialogView.cc
+FacadeAdapter.o: FacadeAdapter.h FacadeAdapter.cc
